color: Make transfer function approximation continuous

When approximating the transfer function's linear segment, ensure that
- it go through the origin
- it be continuous
This is in contrast with the previous behavior, which was to do a linear
fit.

This may result in a greater error than otherwise (e.g, if the table's
data didn't go through the origin). That does not matter, because we
will then judge the fit by its maximum error, and if the maximum error
is too large, we will use a LUT at compositing time.

As an opportunistic fix, when doing the nonlinear least squares on the
nonlinear segment of the data, assume that all in the domain [0.15, 1.0]
be in the nonlinear segment. This is in contrast to the previous
behavior, which used the domain [0.25, 1.0]. I found repeatedly that
extending this domain resulted in a better fit (and the linear segment
starts almost-never-if-not-never above 0.15).

Bug: 768724
Change-Id: Id76cf380c08bc8b050bbb4fd7c9668a186fa447e
Reviewed-on: https://chromium-review.googlesource.com/695181
Reviewed-by: Fredrik Hubinette <hubbe@chromium.org>
Commit-Queue: ccameron chromium <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506144}
Former-commit-id: c3dfdcdcba1f5fbd1f95e5e1fa0c6396ad58fbdc